# AdventOfCode2024

./: .gitignore  LICENSE  README.md  cargo-all.sh  scaffold.sh  trunk-all.sh
common/rs/aoc/: Cargo.toml
common/rs/bitset/: Cargo.toml
common/rs/embedded/: Cargo.toml  README
common/rs/embedded/.cargo/: config.toml
common/rs/ui/: Cargo.toml
common/rs/ui2/: Cargo.toml
day01/rs/: Cargo.toml
day01/rs/benches/: bench.rs
day01/rs/src/: lib.rs  main.rs
day01/rsui/: Cargo.toml  build.rs
day02/rs/: Cargo.toml  build.rs
day02/rs/benches/: bench.rs
day02/rs/src/: lib.rs  main.rs
day02/rsui/: Cargo.toml
day02/rsui/src/: main.rs
day03/rs/: Cargo.toml  clippy.toml
day03/rs/benches/: bench.rs
day03/rs/src/: lib.rs  main.rs
day03/rsui/: Cargo.toml  build.rs
day03/rsui/src/: main.rs
day04/rs/: Cargo.toml  build.rs
day04/rs/benches/: bench.rs
day04/rs/src/: lib.rs  main.rs
day04/rsui/: .gitignore  Cargo.toml
day04/rsui/src/: main.rs
day05/rs/: Cargo.toml  build.rs
day05/rs/benches/: bench.rs
day05/rs/src/: lib.rs  main.rs
day05/rsui/: Cargo.toml  build.rs
day05/rsui/src/: main.rs
day06/rs/: Cargo.toml  build.rs
day06/rs/benches/: bench.rs
day06/rs/src/: lib.rs  main.rs
day06/rsui/: Cargo.toml
day06/rsui/src/: main.rs
day07/rs/: Cargo.toml  build.rs
day07/rs/benches/: bench.rs
day07/rs/src/: lib.rs  main.rs
day07/rsui/: Cargo.toml
day07/rsui/src/: main.rs
day08/rs/: Cargo.toml  build.rs
day08/rs/benches/: bench.rs
day08/rs/src/: lib.rs  main.rs
day08/rsui/: Cargo.toml
day08/rsui/src/: main.rs
day09/rs/: Cargo.toml  build.rs  clippy.toml
day09/rs/benches/: bench.rs
day09/rs/src/: lib.rs  main.rs
day09/rsui/: Cargo.toml
day09/rsui/src/: main.rs
day10/rs/: Cargo.toml  build.rs  clippy.toml
day10/rs/benches/: bench.rs
day10/rs/src/: lib.rs  main.rs
day10/rsui/: Cargo.toml
day10/rsui/src/: main.rs
day11/rs/: Cargo.toml  build.rs  clippy.toml
day11/rs/benches/: bench.rs
day11/rs/src/: lib.rs  main.rs
day11/rsui/: Cargo.toml
day11/rsui/src/: main.rs
day12/rs/: Cargo.toml  build.rs  clippy.toml
day12/rs/benches/: bench.rs
day12/rs/src/: lib.rs  main.rs
day12/rsui/: Cargo.toml  build.rs
day12/rsui/src/: main.rs
day13/rs/: Cargo.toml  clippy.toml
day13/rs/benches/: bench.rs
day13/rs/src/: lib.rs  main.rs  simd.rs
day13/rsui/: Cargo.toml  build.rs  index.html
day13/rsui/src/: main.rs
day14/rs/: Cargo.toml  build.rs  clippy.toml
day14/rs/benches/: bench.rs
day14/rs/src/: lib.rs  main.rs
day14/rsui/: Cargo.toml  index.html
day14/rsui/src/: main.rs
day15/rs/: Cargo.toml  build.rs
day15/rs/benches/: bench.rs
day15/rs/src/: lib.rs  main.rs
day15/rsui/: Cargo.toml  index.html
day15/rsui/src/: main.rs
day16/rs/: Cargo.toml  build.rs  clippy.toml
day16/rs/benches/: bench.rs
day16/rs/src/: lib.rs  main.rs
day16/rsui/: Cargo.toml  build.rs  index.html
day16/rsui/src/: main.rs
day17/rs/: Cargo.toml  clippy.toml
day17/rs/benches/: bench.rs
day17/rs/src/: lib.rs  main.rs
day17/rsui/: Cargo.toml  build.rs  index.html
day17/rsui/src/: main.rs
day18/rs/: Cargo.toml
day18/rs/benches/: bench.rs
day18/rs/src/: lib.rs  main.rs
day18/rsui/: Cargo.toml  build.rs  index.html
day18/rsui/src/: main.rs
day19/rs/: Cargo.toml  clippy.toml
day19/rs/benches/: bench.rs
day19/rs/src/: lib.rs  main.rs
day19/rsui/: Cargo.toml  build.rs  index.html
day19/rsui/src/: main.rs
day20/rs/: Cargo.toml  build.rs  clippy.toml
day20/rs/benches/: bench.rs
day20/rs/src/: lib.rs  main.rs
day20/rsui/: Cargo.toml  index.html
day20/rsui/src/: main.rs
day21/rs/: Cargo.toml  build.rs  clippy.toml
day21/rs/benches/: bench.rs
day21/rs/src/: consts.rs  lib.rs  main.rs
day21/rsui/: Cargo.toml  index.html
day21/rsui/src/: main.rs
day22/rs/: Cargo.toml  clippy.toml
day22/rs/benches/: bench.rs
day22/rs/src/: lib.rs  main.rs
day22/rsui/: Cargo.toml  build.rs  index.html
day22/rsui/src/: main.rs
day23/rs/: Cargo.toml  build.rs  clippy.toml
day23/rs/benches/: bench.rs
day23/rs/src/: lib.rs  main.rs
day23/rsui/: Cargo.toml  index.html
day23/rsui/src/: main.rs
day24/rs/: Cargo.toml
day24/rs/benches/: bench.rs
day24/rs/src/: lib.rs  main.rs
day24/rsui/: Cargo.toml  build.rs  index.html
day24/rsui/src/: main.rs
day25/rs/: Cargo.toml  build.rs
day25/rs/benches/: bench.rs
day25/rs/src/: lib.rs  main.rs
day25/rsui/: Cargo.toml  index.html
day25/rsui/src/: main.rs
embedded/boards/arduino-nano33blesense/: Cargo.toml  README  init.gdb
embedded/boards/arduino-nano33blesense-embassy/: Cargo.toml  README  init.gdb  memory.x
embedded/boards/esp32/: Cargo.toml
embedded/boards/esp32-embassy/: Cargo.toml
embedded/boards/esp32c3/: Cargo.toml
embedded/boards/esp32c3-embassy/: Cargo.toml  rust-toolchain.toml
embedded/boards/esp32c6/: Cargo.toml
embedded/boards/esp32c6-embassy/: Cargo.toml  clippy.toml  rust-toolchain.toml
embedded/boards/esp32s2/: Cargo.toml  clippy.toml
embedded/boards/esp32s2-embassy/: Cargo.toml
embedded/boards/esp32s3/: Cargo.toml
embedded/boards/esp32s3-embassy/: Cargo.toml  clippy.toml
embedded/boards/nrf52840-dk/: Cargo.toml  README  init.gdb
embedded/boards/nrf52840-dk-embassy/: Cargo.toml  README  init.gdb  rust-toolchain.toml
embedded/boards/nucleo-h743zi/: Cargo.toml  init.gdb  (+1 more)
embedded/boards/nucleo-h743zi-embassy/: Cargo.toml  README  init.gdb
embedded/embedded-aoc/: Cargo.toml
embedded/esp32/: Cargo.toml
embedded/esp32/.cargo/: config.toml
embedded/esp32/src/: main.rs
embedded/esp32c3/: Cargo.toml
embedded/esp32c3/src/: main.rs
embedded/esp32c6/: Cargo.toml
embedded/nrf52840-dk/: Cargo.toml  clippy.toml
embedded/nrf52840-dk/.cargo/: config.toml
embedded/nrf52840-dk/src/: timestamp.rs
embedded/nucleo-h743zi/: Cargo.toml  README  init.gdb
embedded/rp-pico/: Cargo.toml  README  clippy.toml  init.gdb
embedded/rp-pico/.cargo/: config.toml
embedded/rp-pico/src/: main.rs
embedded/rp-pico2/: Cargo.toml  README
embedded/stm32f3discovery/: Cargo.toml  README
(+75 files in other folders)
