[package]
name = "day01"
version = "0.1.0"
edition = "2021"

[package.metadata.aoc]
year = 2024
day = 1

[dependencies]
hashbrown = "0.15.2"
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false
