[package]
name = "day02"
version = "0.1.0"
edition = "2021"

[package.metadata.aoc]
year = 2024
day = 2

[features]
default = ["parallel", "input"]

parallel = ["dep:rayon"]
input = ["dep:lazy_static"]

[dependencies]
heapless = "0.8.0"
itertools = "0.13.0"
lazy_static = { version = "1.4", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"
