[package]
name = "day02"
version = "0.1.0"
edition = "2024"

[package.metadata.aoc]
year = 2024
day = 2

[features]
default = ["parallel", "input"]

parallel = ["dep:rayon"]
input = []

[dependencies]
heapless = "0.8.0"
itertools = { version = "0.13.0", default-features = false }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"

[profile.release]
debug = true
codegen-units = 1