[package]
name = "day03"
version = "0.1.0"
edition = "2021"

[package.metadata.aoc]
year = 2024
day = 3

[dependencies]
lazy_static = "1.4"
nom = "7.1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"
