[package]
name = "day03"
version = "0.1.0"
edition = "2021"

[features]
default = ["input"]

input = ["dep:lazy_static"]

[package.metadata.aoc]
year = 2024
day = 3

[dependencies]
lazy_static = { version = "1.4", optional = true }
nom = { version = "7.1.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"
