[package]
name = "day03"
version = "0.1.0"
edition = "2021"

[features]
default = ["input"]

input = []

[package.metadata.aoc]
year = 2024
day = 3

[dependencies]
nom = { version = "7.1.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1