[package]
name = "day08"
version = "0.1.0"
edition = "2021"

[features]
default = ["input"]

input = []

[package.metadata.aoc]
year = 2024
day = 8

[dependencies]
heapless = "0.8.0"
bitset = { path = "../../common/rs/bitset" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"

[profile.release]
codegen-units = 1
debug = true
