[package]
name = "day10"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel", "input"]

input = ["dep:lazy_static"]
parallel = ["dep:rayon"]

[package.metadata.aoc]
year = 2024
day = 10

[dependencies]
heapless = "0.8.0"
lazy_static = { version = "1.4", optional = true }
rayon = { version = "1.10.0", optional = true }
bitset = { path = "../../common/rs/bitset" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1
