[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[package.metadata.aoc]
year = 2024
day = 11

[dependencies]
heapless = "0.8.0"
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1