[package]
name = "day14ui"
version = "0.1.0"
edition = "2021"

[package.metadata.aoc]
year = 2024
day = 14

[dependencies]
day14 = { path = "../rs" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.99"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]

[dependencies.yew]
version = "0.21"
features = ["csr"]

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }
