[package]
name = "day14ui"
version = "0.1.0"
edition = "2021"

[dependencies]
day14 = { path = "../rs", default-features = false }
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.99"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]

[dependencies.yew]
version = "0.21"
features = ["csr"]
