[package]
name = "day17"
version = "0.1.0"
edition = "2021"

[features]
default = ["input"]

input = []

[package.metadata.aoc]
year = 2024
day = 17

[dependencies]
heapless = "0.8.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1
