[package]
name = "day19ui"
version = "0.1.0"
edition = "2021"

[package.metadata.aoc]
year = 2024
day = 19

[dependencies]
day19 = { path = "../rs" }
ui = { path = "../../common/rs/ui", features = ["wasm-bindgen"]}

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[dependencies.yew]
version = "0.21"
features = ["csr"]