[package]
name = "day20"
version = "0.1.0"
edition = "2024"

[features]
default = ["input", "parallel"]

input = []
parallel = ["dep:rayon"]

[package.metadata.aoc]
year = 2024
day = 20

[dependencies]
bitset = { path = "../../common/rs/bitset" }
heapless = "0.8.0"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"

[profile.release]
debug = true
codegen-units = 1
