[package]
name = "day22"
version = "0.1.0"
edition = "2021"

[features]
default = ["input", "parallel"]

input = ["dep:lazy_static"]
parallel = ["dep:rayon"]

[package.metadata.aoc]
year = 2024
day = 22

[dependencies]
itertools = "0.13.0"
bitset = { path = "../../common/rs/bitset" }
lazy_static = { version = "1.4", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lazy_static = "1.4"

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1
