[package]
name = "day22"
version = "0.1.0"
edition = "2021"

[features]
default = ["input", "parallel"]

input = []
parallel = ["dep:rayon"]

[package.metadata.aoc]
year = 2024
day = 22

[dependencies]
itertools = { version = "0.13.0", default-features = false }
bitset = { path = "../../common/rs/bitset" }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
aoc = { path = "../../common/rs/aoc" }

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1
