[package]
name = "esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.22.0", features = ["esp32"] }
esp-backtrace = { version = "0.14.2", features = ["esp32", "exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = "0.4.22"
embedded-io = "0.6.1"
embedded-aoc = { path = "../embedded-aoc", default-features = false, features = ["stack150k", "log"] }
fugit = "0.3.7"

[lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"

[profile.release]
debug = true
codegen-units = 1
# incremental = false
lto = 'fat'
# opt-level = 's'
