[package]
name = "nrf52840-dk"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
nrf52840-hal = "0.18.0"
embedded-hal = "1.0.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
fugit = { version = "0.3.7", features = ["defmt"] }
embedded-aoc = { path = "../embedded-aoc", default-features = false, features = ["stack150k", "defmt"] }
serial-port-splitter = { path = "../serial-port-splitter" }

[lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"

[profile.release]
debug = true
codegen-units = 1
lto = 'fat'

[profile.dev]
codegen-units = 1
