[package]
name = "aoc2024-rp-pico"
version = "0.1.0"
edition = "2021"
authors = ["vescoc"]
homepage = "urn:private"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.11.0", features = ["binary-info", "rt", "defmt", "critical-section-impl"] }
usb-device = { version = "0.3.2" }
embedded-aoc = { path = "../embedded-aoc", features = ["stack150k"] }

[lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"

[profile.release]
debug = true
codegen-units = 1
