[package]
name = "embedded-aoc"
version = "0.1.0"
edition = "2021"
authors = ["vescoc"]
homepage = "urn:private"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
heapless = "0.8.0"
rp235x-hal = { version = "0.2.0", features = ["binary-info", "rt", "defmt", "critical-section-impl"] }
usb-device = { version = "0.3.2" }
usbd-serial = "0.2.2"

day01 = { path = "../../../day01/rs", default-features = false }
day02 = { path = "../../../day02/rs", default-features = false }
day03 = { path = "../../../day03/rs", default-features = false }
day04 = { path = "../../../day04/rs", default-features = false }
day05 = { path = "../../../day05/rs", default-features = false }
day06 = { path = "../../../day06/rs", default-features = false }
day07 = { path = "../../../day07/rs", default-features = false }
day08 = { path = "../../../day08/rs", default-features = false }
day09 = { path = "../../../day09/rs", default-features = false }
day10 = { path = "../../../day10/rs", default-features = false }
day11 = { path = "../../../day11/rs", default-features = false }
day12 = { path = "../../../day12/rs", default-features = false }
day13 = { path = "../../../day13/rs", default-features = false }
day14 = { path = "../../../day14/rs", default-features = false }
day15 = { path = "../../../day15/rs", default-features = false }
day16 = { path = "../../../day16/rs", default-features = false }
day17 = { path = "../../../day17/rs", default-features = false }
day18 = { path = "../../../day18/rs", default-features = false }
day19 = { path = "../../../day19/rs", default-features = false }
day20 = { path = "../../../day20/rs", default-features = false }
day21 = { path = "../../../day21/rs", default-features = false }
day22 = { path = "../../../day22/rs", default-features = false }
day23 = { path = "../../../day23/rs", default-features = false }
day24 = { path = "../../../day24/rs", default-features = false }
day25 = { path = "../../../day25/rs", default-features = false }

[lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"

[profile.release]
debug = true
codegen-units = 1